--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,13 @@
     box-sizing: border-box;
 }
 
-/* main {
-    background-image: url('https://i.postimg.cc/DZkDgNdY/DN-too.jpg');
+ body {
+    background-image: url('https://i.postimg.cc/3R6zjjtY/grey.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0%;
     
-  } */
+  } 
   /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
@@ -41,7 +41,7 @@
 }
 
 /* The circles on the timeline */
-.container::after {
+.timeline .container::after {
   content: '';
   position: absolute;
   width: 25px;
@@ -106,7 +106,7 @@
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 300px) {
   /* Place the timelime to the left */
   .timeline::after {
   display: none;
@@ -155,3 +155,21 @@ section {
   from {left: 0px;}
   to {left: 300px;}
 }
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+.card-group {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+
+
+
