--- a/styles/style.css
+++ b/styles/style.css
@@ -108,9 +108,10 @@
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 300px) {
   /* Place the timelime to the left */
-  .timeline::after {
+  .timeline::after, ::before {
   display: none;
   }
+
   
   /* Full-width containers */
   .container {
@@ -162,14 +163,21 @@ img {
   width: 150px;
 }
 .card-group {
-  display: grid;
+  display: wrap;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
   justify-content: center;
   align-items: center;
   margin-top: 50px;
 }
-
-
+.card-group{
+  display: flex;
+}
+@media screen and (max-width: 900px) {
+  .card-group{
+    flex-direction: column;
+  }
+  
+}
 
 
