--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,13 @@
     box-sizing: border-box;
 }
 
- body {
-    background-image: url('https://i.postimg.cc/3R6zjjtY/grey.jpg');
+ /* body {
+    background-image: url('https://i.postimg.cc/7bvNPZP1/tim-mossholder-q093c-Nh-4-Q0-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0%;
     
-  } 
+  }  */
   /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
@@ -106,8 +106,19 @@
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 720px) {
   /* Place the timelime to the left */
+  .left::after , .left::before {
+    display: none !important; 
+  }
+
+  .left {
+    width: 100vw !important;
+    background-color: orange;
+  }
+
+
+
   .timeline::after, ::before {
   display: none;
   }
@@ -141,9 +152,8 @@
   .logo {
     width: 3em;
   }
-.homepage {}
-h1, h2, p {
-    display: absolute;
+.homepage h1 h2{
+    /* display: ; */
     text-align: center;
 }
 section {
@@ -156,7 +166,7 @@ section {
   from {left: 0px;}
   to {left: 300px;}
 }
-img {
+ img {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
@@ -179,5 +189,11 @@ img {
   }
   
 }
-
-
+footer {
+  background-color: wheat;
+  position: absolute;
+  width: 100vw;
+}
+h1, h2 {
+  text-align: center;
+}
