--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,13 @@
     box-sizing: border-box;
 }
 
- /* body {
+ body {
     background-image: url('https://i.postimg.cc/7bvNPZP1/tim-mossholder-q093c-Nh-4-Q0-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0%;
     
-  }  */
+  } 
   /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
@@ -112,14 +112,7 @@
     display: none !important; 
   }
 
-  .left {
-    width: 100vw !important;
-    background-color: orange;
-  }
-
-
-
-  .timeline::after, ::before {
+  .timeline::after {
   display: none;
   }
 
@@ -189,11 +182,15 @@ section {
   }
   
 }
-footer {
+/* footer {
   background-color: wheat;
   position: absolute;
   width: 100vw;
-}
+} */
 h1, h2 {
   text-align: center;
+}
+#form{
+  width: 35rem;
+  margin: auto;
 }
